// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jhbick gJVEas"
    role="document"
  >
    <div
      class="sc-dkljCc DKtQu sc-gHmoSK tWBDv"
      tabindex="0"
    >
      <span
        class="sc-djMJHV hqkuKg"
      >
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZxFvJ hWYCGm sc-ewKWQi jIIrqK"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-cHqurc cczfoP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-JXQyv iHSScO"
    >
      : 
    </i>
    <span
      class="sc-eillgj iTYiLF"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jhbick gJVEas"
    role="document"
  >
    <div
      class="sc-dkljCc DKtQu sc-gHmoSK tWBDv"
      tabindex="0"
    >
      <span
        class="sc-djMJHV hqkuKg"
      >
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZxFvJ hWYCGm sc-ewKWQi jIIrqK"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-cHqurc cczfoP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-JXQyv iHSScO"
    >
      : 
    </i>
    <span
      class="sc-eillgj iTYiLF"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jhbick gJVEas"
    role="document"
  >
    <div
      class="sc-dkljCc DKtQu sc-gHmoSK tWBDv"
      tabindex="0"
    >
      <span
        class="sc-djMJHV hqkuKg"
      >
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZxFvJ hWYCGm sc-ewKWQi jIIrqK"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-cHqurc cczfoP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-JXQyv iHSScO"
    >
      : 
    </i>
    <span
      class="sc-eillgj iTYiLF"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-hZxFvJ hWYCGm sc-djDiuc ceOyJL"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cHqurc cczfoP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jhbick gJVEas"
    role="document"
  >
    <div
      class="sc-dkljCc DKtQu sc-gHmoSK tWBDv"
      tabindex="0"
    >
      <span
        class="sc-djMJHV hqkuKg"
      >
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZxFvJ hWYCGm sc-ewKWQi jIIrqK"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-cHqurc cczfoP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-JXQyv iHSScO"
    >
      : 
    </i>
    <span
      class="sc-eillgj iTYiLF"
    >
      hey
       
      <span
        class="sc-hZxFvJ hWYCGm sc-djDiuc ceOyJL"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cHqurc cczfoP"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-hZxFvJ hWYCGm sc-djDiuc ceOyJL"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cHqurc cczfoP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jhbick gJVEas"
    role="document"
  >
    <div
      class="sc-dkljCc DKtQu sc-gHmoSK tWBDv"
      tabindex="0"
    >
      <span
        class="sc-djMJHV hqkuKg"
      >
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZxFvJ hWYCGm sc-ewKWQi jIIrqK"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-cHqurc cczfoP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-JXQyv iHSScO"
    >
      : 
    </i>
    <span
      class="sc-eillgj iTYiLF"
    >
      hey
       
      <span
        class="sc-hZxFvJ hWYCGm sc-djDiuc ceOyJL"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cHqurc cczfoP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jhbick gJVEas"
    role="document"
  >
    <div
      class="sc-dkljCc DKtQu sc-gHmoSK tWBDv"
      tabindex="0"
    >
      <span
        class="sc-djMJHV hqkuKg"
      >
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZxFvJ hWYCGm sc-ewKWQi jIIrqK"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-cHqurc cczfoP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-JXQyv iHSScO"
    >
      : 
    </i>
    <span
      class="sc-eillgj iTYiLF"
    >
      <span
        class="sc-hZxFvJ hWYCGm sc-djDiuc ceOyJL"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cHqurc cczfoP"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jhbick gJVEas"
    role="document"
  >
    <div
      class="sc-dkljCc DKtQu sc-gHmoSK tWBDv"
      tabindex="0"
    >
      <span
        class="sc-djMJHV hqkuKg"
      >
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZxFvJ hWYCGm sc-ewKWQi jIIrqK"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-cHqurc cczfoP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-JXQyv iHSScO"
    >
      : 
    </i>
    <span
      class="sc-eillgj iTYiLF"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-hZxFvJ hWYCGm sc-djDiuc ceOyJL"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cHqurc cczfoP"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jhbick fWJZTT"
    role="document"
  >
    <div
      class="sc-dkljCc DKtQu sc-gHmoSK tWBDv"
      tabindex="0"
    >
      <span
        class="sc-djMJHV hqkuKg"
      >
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-JXQyv iHSScO"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZxFvJ hWYCGm sc-ewKWQi jIIrqK"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-cHqurc cczfoP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-JXQyv iHSScO"
    >
      : 
    </i>
    <span
      class="sc-eillgj iTYiLF"
    >
      Hey
       
      <span
        class="sc-hZxFvJ hWYCGm sc-djDiuc ceOyJL"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cHqurc cczfoP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
